# AI-Native

./: .env.example  .gitignore  AGENTS.md  README.md  compose.yaml  pyproject.toml  开发执行计划.md  要求.md
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_readonly_sql_demo_dataset.py  0003_tool_calls_idempotency_key.py
apps/api/src/agents/: __init__.py  analyst.py  messages.py  planner.py  prompts.py  researcher.py  roles.py  schemas.py  tool_loop.py  writer.py
apps/api/src/api/: config.py  deps.py  main.py  readiness.py
apps/api/src/events/: broadcaster.py  handler.py  schemas.py
apps/api/src/llm/: __init__.py  errors.py  factory.py  fake.py  litellm_support.py  openai_compatible.py  protocol.py  resilient.py
apps/api/src/mcp_client/: __init__.py  client.py  errors.py  factory.py  schema.py
apps/api/src/observability/: __init__.py  activity.py  context.py  log_config.py  metrics.py  metrics_server.py  task_tokens.py  tracing.py
apps/api/src/orchestration/: engine_router.py  models.py  protocol.py
apps/api/src/persistence/: checkpointer.py  dapr_client.py  dapr_state.py  database.py  idempotency.py  ids.py  models.py  repository.py  session_store.py  state_machine.py
apps/api/src/workflows/: __init__.py  client.py  constraints.py  durable_agent_smoke.py  event_messages.py  models.py  sync_runtime.py  task_workflow.py  worker_main.py
apps/api/tests/: conftest.py  db_helpers.py  llm_helpers.py  test_analyst_agent.py  test_crewai_engine.py  test_crewai_workflow_activities.py  test_dapr_checkpoint_saver.py  test_dapr_state.py  test_dev_writer_api.py  test_durable_agent_smoke.py  test_engine_router.py  test_event_broadcaster.py  test_events_handler.py  test_health.py  test_idempotency.py  test_langgraph_engine.py  test_llm_contract.py  test_llm_errors.py  test_llm_resilience.py  test_llm_smoke.py  test_mcp_client.py  test_minimal_runner.py  test_observability.py  test_planner_agent.py  test_providers_api.py  test_researcher_agent.py  test_session_store.py  test_settings_api.py  test_settings_service.py  test_state_machine.py  test_task_events_api.py  test_task_pause_resume_api.py  test_task_repository.py  test_task_workflow.py  test_tasks_api.py  test_tool_loop.py  test_tools_api.py  test_workflow_activities.py  test_workflow_client.py  test_writer_agent.py
apps/mcp-server/: pyproject.toml
apps/mcp-server/src/mcp_server/: __main__.py  config.py  (+2 more)
apps/mcp-server/tests/: conftest.py  test_calculator.py  test_code_runner.py  test_placeholder.py  test_readonly_sql.py  test_server_state.py  test_web_search.py
(+101 files in other folders)
