[project]
name = "mcp-server"
version = "0.1.0"
description = "AI Native MCP Server"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30",
    "fastapi>=0.115",
    "httpx>=0.27",
    "mcp>=1.26,<1.27",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
